migrate off deprecated language features